--- a/src/app/modules/define-pages/texteditor/texteditor.component.html
+++ b/src/app/modules/define-pages/texteditor/texteditor.component.html
@@ -74,8 +74,8 @@
     </div>
     <br />
     <div class="row">
-        <ckeditor formControlName="PageBody" [config]="ckeConfig" debounce="500">
-        </ckeditor>
+        <!-- <ckeditor formControlName="PageBody" [config]="ckeConfig" debounce="500">
+        </ckeditor> -->
     </div>
     <br>
     <div class="row">
