--- a/src/app/modules/attendance/attendancecount/attendancecount.component.html
+++ b/src/app/modules/attendance/attendancecount/attendancecount.component.html
@@ -1,23 +1,8 @@
-<div style="padding: 15px;"><strong>Student Attendance Report</strong></div>
+<div style="padding: 15px;"><strong>Student Attendance Count</strong></div>
 <!-- <alert></alert> -->
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <form [formGroup]="searchForm">
-    <!-- <mat-form-field appearance="outline">
-        <mat-label>Class</mat-label>
-        <mat-select formControlName="searchClassId" (selectionChange)="bindClassSubject()">
-            <mat-option value="0">select</mat-option>
-            <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field> -->
-    <!-- <mat-form-field appearance="outline">
-        <mat-label>Section</mat-label>
-        <mat-select formControlName="searchSectionId">
-            <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">{{item.MasterDataName}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    -->
+
     <mat-form-field appearance="outline">
         <mat-label>from</mat-label>
         <input formControlName="searchFromDate" matInput [matDatepicker]="FromDate" autocomplete="off">
@@ -30,6 +15,16 @@
         <mat-datepicker-toggle matSuffix [for]="ToDate"></mat-datepicker-toggle>
         <mat-datepicker #ToDate></mat-datepicker>
     </mat-form-field>
+    <mat-checkbox (click)="$event.stopPropagation()" formControlName="searchSubjectWise">
+    </mat-checkbox> Subject wise &nbsp;
+    <!-- <mat-form-field appearance="outline">
+        <mat-label>Subject</mat-label>
+        <mat-select formControlName="searchClassSubjectId">
+            <mat-option>--select--</mat-option>
+            <mat-option *ngFor="let item of FilteredClassSubjects" [value]="item.ClassSubjectId">{{item.ClassSubject}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field> -->
     <button [disabled]="loading" (click)="GetStudentAttendance()" mat-raised-button color="accent">
         <mat-icon>search</mat-icon>
         <mat-icon *ngIf="loading">
@@ -61,7 +56,7 @@
             {{element.Absent}}
         </mat-cell>
         <mat-footer-cell *matFooterCellDef>{{TotalAbsent}}</mat-footer-cell>
-    </ng-container>    
+    </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
     <mat-footer-row *matFooterRowDef="displayedColumns" class="element-row"></mat-footer-row>
