--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -25,7 +25,8 @@
     //background-size    : cover;
     //background-repeat: no-repeat;
     //background-size: cover;
-    background-color   :#2c5f2d;//#009974;//var(--maincolor1); //#0F5298; //#4f8ec2;//
+    background-color: #2c5f2d;
+    //background   :linear-gradient(to bottom, #2c5f2d, #ffffff);//#2c5f2d;//#009974;//var(--maincolor1); //#0F5298; //#4f8ec2;//
     //box-shadow         : 3px 3px 3px var(--maincolor2);
     top                : 0px;
     //height:300px;
