--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -9,7 +9,7 @@
         </div>
     </mat-sidenav>
     <mat-sidenav-content class="maincontent">
-        <div style="display:flex;flex-direction: row;width:99%">
+        <div style="display:flex;flex-direction: row;">
             <button style="margin-left:5px; width:7px;border:1px solid white" (click)="toggleSidebar()">
             </button>
             <router-outlet></router-outlet>
