--- a/src/app/modules/frontoffice/createhtmlpage/createhtmlpage.component.html
+++ b/src/app/modules/frontoffice/createhtmlpage/createhtmlpage.component.html
@@ -4,10 +4,10 @@
     </div>
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <form [formGroup]="searchForm">
-        <div style="display:flex">
+        <div style="display:flex;justify-content: space-around;">
             <div>
                 <mat-form-field appearance="outline" [style.width.px]="200">
-                    <mat-label>Title</mat-label>
+                    <mat-label>search</mat-label>
                     <mat-select formControlName="searchId">
                         <mat-option *ngFor="let item of FileNames" [value]="item.RulesOrPolicyId">
                             {{item.Title}}
@@ -31,8 +31,8 @@
                     <mat-label>Title</mat-label>
                     <input matInput formControlName="Title" [maxlength]="30">
                 </mat-form-field>
-                <button [disabled]="loading" mat-raised-button (click)="AddNew()">
-                    <mat-icon>add</mat-icon>
+                <button [disabled]="loading" matTooltip="add new" mat-raised-button (click)="AddNew()">
+                    <mat-icon>addnew</mat-icon>
                     <mat-icon *ngIf="loading">
                         <mat-spinner diameter="20" color="Blue"></mat-spinner>
                     </mat-icon>
@@ -41,19 +41,20 @@
         </div>
         <mat-divider></mat-divider>
 
-        <div style="margin-bottom: 15px;">
+        <div style="margin-bottom: 15px;box-sizing:border-box;">
             <!-- <ckeditor [editor]="editor" [config]="config" formControlName="Description">
                 </ckeditor> -->
-            <ckeditor [editor]="Editor" formControlName="Description" [config]="config" (ready)="onReady($event)">
+            <ckeditor formControlName="Description" [config]="ckeConfig">
+                
             </ckeditor>
 
         </div>
-        <div style="display:flex">
-            <div style="margin-right:15px;">
+        <div style="display:flex;box-sizing:border-box;">
+            <div>
                 <mat-checkbox formControlName="Active">
                 </mat-checkbox>&nbsp; Active
             </div>
-            <button [disabled]="loading" mat-raised-button color="accent" (click)="UpdateOrSave()">
+            <button style="margin-left:15px;" [disabled]="loading" mat-raised-button color="accent" (click)="UpdateOrSave()">
                 <mat-icon>save</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
