--- a/src/app/modules/photogallery/filedrag-and-drop/filedrag-and-drop.component.html
+++ b/src/app/modules/photogallery/filedrag-and-drop/filedrag-and-drop.component.html
@@ -1,61 +1,53 @@
-<mat-card>
-    <mat-card-title>
-        Upload Files
-    </mat-card-title>
-    <mat-card-content>
-        <br>
-        <!-- <alert></alert> -->
-        <mat-spinner *ngIf="Processing" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-        <div class="center">
-            <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)"
-                (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
-                <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
-                    drag and drop files here
-                    <!-- <button [disabled]="loading" type="button" (click)="openFileSelector()">Browse Files</button> -->
-                </ng-template>
-            </ngx-file-drop>
-            <br>
-            <div *ngIf="files.length>0">
-                <form [formGroup]="dragdropForm">
-                    <div fxLayout="row" fxLayoutAlign="space-between center">
-                    <mat-form-field hintLabel="Max 100 characters" appearance="outline" fxFlex="60">
-                        <mat-label>Enter folder</mat-label>
-                        <input formControlName="folderName" #album matInput [maxlength]="100" autocomplete="off">
-                        <mat-hint align="end">{{album.value?.length || 0}}/100</mat-hint>
-                    </mat-form-field>
-                    <span style="margin:5px">or</span>
-                    <mat-form-field appearance="outline" fxFlex="30">
-                        <mat-label>Existing albums</mat-label>
-                        <mat-select formControlName="parentId">
-                            <mat-option *ngFor="let album of Albums" [value]="album.FileId">{{album.UpdatedFileFolderName}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-                    <div class="upload-table">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                </tr>
-
-                            </thead>
-                            <tbody class="upload-name-style">
-                                <tr *ngFor="let item of files; let i=index">
-                                    <td>{{ item.relativePath }}</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div>
-                        <button [disabled]="loading" [disabled]="Processing" class="mat-raised-button" matTooltip="upload" type="button" (click)="Upload()"
-                            fxFlex="5">
-                            <mat-icon>file_upload</mat-icon>
-                        </button>
-                    </div>
-                </form>
-            </div>
+<div style="font-weight: bold;padding: 20px;">Upload Image</div>
+<mat-spinner *ngIf="Processing" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+<div style="display:flex;flex-direction: column;">
+    <div style="margin-bottom: 15px;justify-content: center;">
+        <span style="color:red;" *ngIf="message">{{message}}</span>
+        <input #inputfile [hidden]="true" type="file" accept='image/*' (change)="preview(inputfile.files)" />
+        <div style="border:1px solid lightgray; padding:5px;margin-top: 5px;margin-bottom: 5px;">
+            <img [src]="imgURL" height="350px" *ngIf="imgURL.length>0">
+        </div>        
+    </div>
+    <form [formGroup]="folderForm">
+        <div style="display:flex;">
+            <mat-form-field appearance="outline" fxFlex="50">
+                <mat-label>new folder</mat-label>
+                <input formControlName="folderName" #album matInput [maxlength]="100" autocomplete="off">
+                <mat-hint style="margin-top: 5px;" align="end">{{album.value?.length || 0}}/100</mat-hint>
+            </mat-form-field>
+            <span style="margin:5px;margin:15px">or</span>
+            <mat-form-field appearance="outline" fxFlex="30">
+                <mat-label>Existing folder</mat-label>
+                <mat-select formControlName="parentId">
+                    <mat-option *ngFor="let album of Albums" [value]="album.FileId">{{album.UpdatedFileFolderName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
         </div>
-
-    </mat-card-content>
-</mat-card>
+        <!-- <div style="margin-top:15px">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                    </tr>
+                </thead>
+                <tbody class="upload-name-style">
+                    <tr *ngFor="let item of files; let i=index">
+                        <td>{{ item.relativePath }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div> -->
+        <div style="margin: 15px;justify-content: center;display: flex">
+            <button [disabled]="loading || Permission=='read'" mat-flat-button color="accent" matTooltip="select file"
+                (click)="inputfile.click()">
+                <mat-icon aria-label="photo">photo</mat-icon>
+            </button>&nbsp;&nbsp;           
+            <button [disabled]="loading || Permission=='read'" type="submit" (click)="uploadFile()"
+            matTooltip="upload file" mat-flat-button color="accent">
+            <mat-icon aria-label="file_upload">file_upload</mat-icon>
+         </button>
+        
+        </div>
+    </form>
+</div>
