--- a/src/app/modules/questionbank/question/question.component.scss
+++ b/src/app/modules/questionbank/question/question.component.scss
@@ -8,12 +8,11 @@ mat-cell{
 .mat-column-QuestionBankId{
     flex:1 1 50px;
 }
-.mat-column-Questions{
-    flex:1 1 500px;
+.mat-column-Question{
+    flex:1 1 100%;
 }
-.mat-column-LessonId,
 .mat-column-DifficultyLevelId,
 .mat-column-Active,
 .mat-column-Action{
-    flex:1 1 100px;
+    flex:1 0 100px;
 }
