--- a/src/app/modules/questionbank/questionbankboard/questionbankboard.component.html
+++ b/src/app/modules/questionbank/questionbankboard/questionbankboard.component.html
@@ -1,12 +1,11 @@
-
 <mat-card>
-    <mat-card-title style="margin:20px">Front Office</mat-card-title>
+    <mat-card-title style="margin:20px">Question Bank</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:20px">
-        <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+        <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
-                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon>{{tabNames[indx].label}}
+                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
                 </ng-template>
                 <ng-template matTabContent>
                     <div #container></div>
