--- a/src/app/modules/questionbank/syllabus/syllabus.component.html
+++ b/src/app/modules/questionbank/syllabus/syllabus.component.html
@@ -13,23 +13,23 @@
         </mat-form-field>
         <mat-form-field appearance="outline" [style.width.px]="200">
             <mat-label>class subject</mat-label>
-            <mat-select formControlName="searchClassSubjectId" (selectionChange)="cleardata()">
-                <mat-option *ngFor="let item of SelectedClassSubjects" [value]="item.ClassSubjectId">
+            <mat-select formControlName="searchSubjectId" (selectionChange)="cleardata()">
+                <mat-option *ngFor="let item of SelectedClassSubjects" [value]="item.SubjectId">
                     {{item.SubjectName}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" [style.width.px]="200">
-            <mat-label>category</mat-label>
-            <mat-select formControlName="searchCategoryId" (selectionChange)="SelectCategoryChanged()">
-                <mat-option *ngFor="let item of Category" [value]="item.MasterDataId">{{item.MasterDataName}}
+            <mat-label>content unit</mat-label>
+            <mat-select formControlName="searchContentUnitId" (selectionChange)="SelectContentUnitChanged()">
+                <mat-option *ngFor="let item of ContentUnit" [value]="item.MasterDataId">{{item.MasterDataName}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" [style.width.px]="200">
-            <mat-label>sub category</mat-label>
-            <mat-select formControlName="searchSubCategoryId" (selectionChange)="SelectSubCategoryChanged()">
-                <mat-option *ngFor="let item of SelectedSubCategory" [value]="item.MasterDataId">{{item.MasterDataName}}
+            <mat-label>sub content unit</mat-label>
+            <mat-select formControlName="searchSubContentUnitId" (selectionChange)="SelectSubContentUnitChanged()">
+                <mat-option *ngFor="let item of SelectedSubContentUnit" [value]="item.MasterDataId">{{item.MasterDataName}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
@@ -47,7 +47,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field> -->
-        <button [disabled]="loading" mat-raised-button color="accent" (click)="GetQuestionBank()">
+        <button [disabled]="loading" mat-raised-button color="accent" (click)="GetSyllabus()">
             <mat-icon>search</mat-icon>
             <mat-icon *ngIf="loading">
                 <mat-spinner diameter="20" color="Blue"></mat-spinner>
@@ -60,100 +60,53 @@
     </div>
 </form>
 <mat-table #table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="QuestionBankId">
+    <ng-container matColumnDef="SyllabusId">
         <mat-header-cell *matHeaderCellDef>Id
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
-            {{element.QuestionBankId}}
+            {{element.SyllabusId}}
         </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="Questions">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Questions
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-            <mat-form-field appearance="outline" [style.width.px]="300">
-                <textarea [maxlength]="600" [rows]="10" #Questions autocomplete="Off" matInput (blur)="onBlur(element)"
-                    [value]="element.Questions" [(ngModel)]="element.Questions"></textarea>
-                <mat-hint align="end" style="margin:5px">{{Questions.value?.length || 0}}/600</mat-hint>
-            </mat-form-field>
-            <div *ngIf="element.QuestionBankId>0" fxLayout="row"
-                fxLayoutAlign="space-between center">
-                <span style="color:red;" *ngIf="message">{{message}}</span>
-                <input #inputfile [hidden]="true" type="file" accept='image/*'
-                    (change)="preview(inputfile.files,element)" />
-                <div style="border:1px solid lightgray; padding:5px;margin-top: 5px;margin-bottom: 5px;">
-                    <img [src]="element.Diagram" height="150px" *ngIf="element.Diagram.length>0">
-                </div>
-                <div fxLayout="column" fxLayoutAlign="space-between center" style="margin: 5px;">
-                    <button [disabled]="loading || Permission=='read'" class="mat-flat-button"
-                        matTooltip="select file" (click)="inputfile.click()">
-                        <mat-icon aria-label="photo">photo</mat-icon>
-                    </button>&nbsp;&nbsp;
-                    <button [disabled]="loading || Permission=='read'" type="submit" (click)="uploadFile(element.QuestionBankId)"
-                        matTooltip="upload file" class="mat-flat-button">
-                        <mat-icon aria-label="file_upload">file_upload</mat-icon>
-                        <mat-icon *ngIf="loading">
-                            <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                        </mat-icon>
-                    </button>&nbsp;&nbsp;
-                </div>
-            </div>
-        </mat-cell>
-    </ng-container>
-    <!-- <ng-container matColumnDef="CategoryId">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Category
+    <ng-container matColumnDef="ContentUnitId">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Unit
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
             <mat-form-field appearance="outline">
-                <mat-select (selectionChange)="CategoryChanged(element)" (selectionChange)="onBlur(element)"
-                    [(ngModel)]="element.CategoryId" [value]="element.CategoryId">
-                    <mat-option *ngFor="let item of Category" [value]="item.MasterDataId">
+                <mat-select (selectionChange)="ContentUnitChanged(element)" (selectionChange)="onBlur(element)"
+                    [(ngModel)]="element.ContentUnitId" [value]="element.ContentUnitId">
+                    <mat-option *ngFor="let item of ContentUnit" [value]="item.MasterDataId">
                         {{item.MasterDataName}}</mat-option>
                 </mat-select>
             </mat-form-field>
         </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="SubCategoryId">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Sub Category
+    <ng-container matColumnDef="SubContentUnitId">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Sub Unit
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
             <mat-form-field appearance="outline">
-                <mat-select (selectionChange)="SubCategoryChanged(element)" (selectionChange)="onBlur(element)"
-                    [(ngModel)]="element.SubCategoryId" [value]="element.SubCategoryId">
-                    <mat-option *ngFor="let item of element.SubCategories" [value]="item.MasterDataId">
+                <mat-select (selectionChange)="SubContentUnitChanged(element)" (selectionChange)="onBlur(element)"
+                    [(ngModel)]="element.SubContentUnitId" [value]="element.SubContentUnitId">
+                    <mat-option *ngFor="let item of element.SubContentUnits" [value]="item.MasterDataId">
                         {{item.MasterDataName}}</mat-option>
                 </mat-select>
             </mat-form-field>
         </mat-cell>
-    </ng-container> -->
-    <ng-container matColumnDef="LessonId">
+    </ng-container>
+    <ng-container matColumnDef="Lesson">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Lesson
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
             <mat-form-field appearance="outline">
-                <mat-select [(ngModel)]="element.LessonId" (selectionChange)="onBlur(element)" [value]="element.ExamId">
-                    <mat-option [value]="0">--lesson--</mat-option>
-                    <mat-option *ngFor="let item of element.Lessons" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}</mat-option>
-                </mat-select>
+                <input matInput [(ngModel)]="element.Lesson" 
+                [maxlength]="250"
+                autocomplete="Off"
+                (blur)="onBlur(element)" 
+                [value]="element.Lesson">                    
             </mat-form-field>
         </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="DifficultyLevelId">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Difficulty Level
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-            <mat-form-field appearance="outline">
-                <mat-select [(ngModel)]="element.DifficultyLevelId" (selectionChange)="onBlur(element)"
-                    [value]="element.DifficultyLevelId">
-                    <mat-option [value]="0">--difficulty level--</mat-option>
-                    <mat-option *ngFor="let item of DifficultyLevels" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </mat-cell>
-    </ng-container>
-
+    
     <ng-container matColumnDef="Active">
         <mat-header-cell *matHeaderCellDef style="justify-content: center;">Active
         </mat-header-cell>
