--- a/src/app/modules/schoolreports/result/result.component.html
+++ b/src/app/modules/schoolreports/result/result.component.html
@@ -133,7 +133,7 @@
             </div>
             <div style="display:flex;justify-content: center;width:100%;margin-top: 15px;">
                 <button [disabled]="loading || ExamStudentResult.length ==0" matTooltip="print"
-                    printSectionId="printSection" [useExistingCss]="true" ngxPrint class="mat-raised-button">
+                    printSectionId="printSection" [useExistingCss]="true" ngxPrint mat-raised-button>
                     <mat-icon>print</mat-icon>
                 </button>
             </div>
