--- a/src/app/modules/specialfeature/generatecertificate/generatecertificate.component.html
+++ b/src/app/modules/specialfeature/generatecertificate/generatecertificate.component.html
@@ -10,14 +10,24 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Certificates</mat-label>
                     <mat-select formControlName="searchCertificateTypeId" #cerId (selectionChange)="CheckType()">
-                        <mat-option *ngFor="let item of CertificateTypes" [value]="item.MasterDataId">
-                            {{item.MasterDataName}}
+                        <mat-option *ngFor="let item of CertificateTypes" [value]="item.CertificateConfigId">
+                            {{item.Title}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline" style="width: 150px;">
+                    <mat-label>Class</mat-label>
+                    <mat-select formControlName="searchClassId" (selectionChange)="GetStudentClasses()">
+                        <mat-option value="0">select</mat-option>
+                        <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                            {{item.ClassName}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
                 <mat-form-field appearance="outline" [style.width.px]="350">
                     <mat-label>Student</mat-label>
-                    <input type="text" matInput (change)="clear()" formControlName="searchStudentName" [matAutocomplete]="auto">
+                    <input type="text" matInput (change)="clear()" [readonly]="loading" formControlName="searchStudentName"
+                        [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
                         <mat-option *ngFor="let option of filteredStudents | async" [value]="option">
                             {{option.Name}}
@@ -27,12 +37,12 @@
                 <div *ngIf="SportsCertificate">
                     <mat-form-field appearance="outline">
                         <mat-label>Group</mat-label>
-                        <mat-select formControlName="searchStudentGroupId" (selectionChange)="clear()">
+                        <mat-select formControlName="searchStudentGroupId" [disabled]="loading" (selectionChange)="clear()">
                             <mat-option value="0">select</mat-option>
                             <!-- <mat-optgroup *ngFor="let item of Groups" [label]="item.name" [disabled]="item.disabled"> -->
-                                <mat-option *ngFor="let list of Houses" [value]="list.MasterDataId">
-                                    {{list.MasterDataName}}
-                                </mat-option>
+                            <mat-option *ngFor="let list of Houses" [value]="list.MasterDataId">
+                                {{list.MasterDataName}}
+                            </mat-option>
                             <!-- </mat-optgroup> -->
                         </mat-select>
                     </mat-form-field>
@@ -53,7 +63,7 @@
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Sub Category</mat-label>
-                        <mat-select formControlName="searchSubCategoryId"  (selectionChange)="clear()">
+                        <mat-select formControlName="searchSubCategoryId" (selectionChange)="clear()">
                             <mat-option *ngFor="let item of ActivitySubCategory" [value]="item.MasterDataId">
                                 {{item.MasterDataName}}</mat-option>
                         </mat-select>
@@ -90,7 +100,7 @@
                     <ng-container *ngFor="let disCol of ActivityDisplayColumn; let colIndex = index"
                         matColumnDef="{{disCol}}">
                         <mat-header-cell *matHeaderCellDef>
-                            {{disCol!='Action'?disCol:''}}
+                            {{disCol=='Action'?'':disCol=='SportsName'?'Activity':disCol}}
                         </mat-header-cell>
                         <mat-cell *matCellDef="let element">
                             <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read'"
@@ -113,7 +123,7 @@
                 <mat-table #table style="overflow: auto;" [dataSource]="dataSource">
                     <ng-container *ngFor="let disCol of DisplayColumn; let colIndex = index" matColumnDef="{{disCol}}">
                         <mat-header-cell *matHeaderCellDef>
-                            {{disCol!='Action'?disCol:''}}
+                            {{disCol=='Action'?'':disCol=='SportsName'?'Activity':disCol}}
                         </mat-header-cell>
                         <mat-cell *matCellDef="let element">
                             {{element[disCol]}}
@@ -126,20 +136,24 @@
                 <mat-paginator [pageSizeOptions]="[10,20,50]" style="display:flex;justify-content:center">
                 </mat-paginator>
             </div>
-            <div id="printSection" *ngIf="GeneratedCertificatelist.length==0">
-                <mat-table class="border radial-repeating" [dataSource]="dataSource">
-                    <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index"
-                        matColumnDef="{{disCol}}">
-                        <mat-header-cell *matHeaderCellDef style="border-right:0px">
-                        </mat-header-cell>
-                        <mat-cell style="border-right:0px;justify-content: center;" *matCellDef="let element"
-                            [innerHTML]="element[disCol] | encodeHTML">
-                            <!-- <span [ngStyle]="element['Logic']" ></span>                               -->
-                        </mat-cell>
-                    </ng-container>
-                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-                </mat-table>
+            <div #printSection *ngIf="GeneratedCertificatelist.length==0">
+                <div class="container">
+                    <img style="margin:15px 0px 0px 0px;padding:0px" [src]="backgroundimage">
+                    <span class="contentwrapper" [innerHTML]="CertificateDescription | encodeHTML">
+                    </span>
+                </div>
+                <!-- <mat-table [dataSource]="dataSource" class="cerBackground" [ngStyle]="{'background-image':'url(' + backgroundimage + ')'}">
+                        <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index"
+                            matColumnDef="{{disCol}}">
+                            <mat-header-cell *matHeaderCellDef style="border-right:0px">
+                            </mat-header-cell>
+                            <mat-cell style="border-right:0px;justify-content: center;" *matCellDef="let element"
+                                [innerHTML]="element[disCol] | encodeHTML">
+                            </mat-cell>
+                        </ng-container>
+                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+                    </mat-table> -->
             </div>
             <br>
             <div fxLayout="row" fxLayoutAlign="center center">
@@ -150,17 +164,16 @@
                         <mat-spinner diameter="20" color="Blue"></mat-spinner>
                     </mat-icon>
                 </button>
-                <!-- <button [disabled]="loading || Permission=='read' || CertificateElements.length==0" mat-raised-button
-                    (click)="print()"
-                    color="accent" matTooltip="print">
-                    <mat-icon>print</mat-icon>
-                </button>(click)="Save()" -->
-                <button 
-                    [disabled]="loading || Permission=='read' || CertificateElements.length==0" matTooltip="print"
-                    printSectionId="printSection" styleSheetFile="assets/print.scss" ngxPrint mat-raised-button
-                    color="accent">
+                <button [disabled]="loading || Permission=='read' || CertificateElements.length==0" matTooltip="print"
+                (click)="print()"    
+                mat-raised-button color="accent">
                     <mat-icon>print</mat-icon>
                 </button>
+                <!-- <button [disabled]="loading || Permission=='read' || CertificateElements.length==0" matTooltip="print"
+                    printSectionId="printSection" [useExistingCss]="true" styleSheetFile="assets/print.scss"
+                    PrintWithCustomScss ngxPrint mat-raised-button color="accent">
+                    <mat-icon>print</mat-icon>
+                </button> -->
             </div>
         </div>
     </div>
