--- a/src/assets/print.scss
+++ b/src/assets/print.scss
@@ -7,179 +7,32 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
+* {
+	transition: none !important;
+}
+
 mat-form-field,
 button {
 	margin-right: 15px;
 }
 
 mat-table {
-	width:100%;
+	width  : 100%;
 	padding: 0px;
 	margin : 0px;
 }
 
+@media print {
+	.container {
+		position: relative;
+		margin  : 0px;
+		padding : 0px;
+	}
 
-.header {
-	width    : 100%;
-	font-size: 30px;
-	color    : blue
-}
-
-.container {
-	width          : 100%;
-	display        : flex;
-	justify-content: space-between;
-	text-align     : center
-}
-
-span {
-	width: 100%;
-}
-div{
-//	width:100%;
-justify-content: center;
-	white-space: nowrap;
-}
-
-.blank {
-	//max-width: 100%;
-	display        : flex;
-	justify-content: center;
-	font-weight    : bold;
-	flex           : 1 0 100%;
-	border-bottom  : 1px solid lightgray;
-	margin-bottom  : 15px
-}
-.contentwrapper {
-	//justify-content: center;
-	display       : flex;
-	flex-direction: column;
-	padding    : 2.5cm;
-	//margin-bottom : 1in;
-	//width         : max-content;
-}
-.footerwrapper{
-	width:100%;
-	margin-top:2cm;
-	//margin-bottom: 2cm;
-}
-.element-row {
-	justify-content:space-between;
-	width              : 5in;
-	border-bottom-style: none;
-	min-height         : 0px;
-	//padding-left : 100px;
-	//padding-right: 100px;
-}
-
-.border {
-	//box-sizing: border-box;
-	font-size  : 14px;
-	display    : grid;
-	place-items: center;
-	min-height : 200px;
-	border     : 8px solid;
-	padding    : 1cm;
-	width: 17.5cm;
-	height: 12cm;
-}
-
-.headpad {
-	padding  : 30px 0px 15px 0px;
-	font-size: 30pt
-}
-
-.txtalign {
-	text-align: center
-}
-
-.width100 {
-	width     : 100%;
-	margin    : 0px;
-	text-align: center
-}
-
-.red {
-	color      : red;
-	font-weight: bold
-}
-
-.cerhead {
-	font-size: 30px;
-	padding  : 50px 0px 50px 0px;
-}
-
-.CertificateFont {
-	font-family: "Ewert", cursive;
-	margin-top: 2cm;
-	margin-bottom: 2cm;
-}
-
-
-body {
-	//font-family: Roboto,Helvetica Neue,'Courier New', Courier, monospace,"Ewert";
-	font-size            : 14px;
-	margin               : 0px;
-	padding              : 0px;
-	size                 : A5 landscape;
-	display              : grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-	grid-gap             : 60px;
-}
-
-
-.full {
-	border-image: linear-gradient(45deg, turquoise, greenyellow) 1;
-}
-
-.sides {
-	border-image: linear-gradient(to left, turquoise, greenyellow) 1 0;
-}
-
-.sides-2 {
-	border-image: linear-gradient(to bottom, turquoise, greenyellow) 0 1;
-}
-
-.linear-repeating {
-	border-width: 10px;
-	border-image: repeating-linear-gradient(45deg, turquoise, pink 4%) 1;
-}
-
-.radial-repeating {
-	border-width: 20px;
-	border-image: repeating-radial-gradient(circle at 10px,
-			turquoise,
-			pink 2px,
-			greenyellow 4px,
-			pink 2px) 1;
-}
-
-/* border radius example is drawn from this pen: https://codepen.io/shshaw/pen/MqMZGR
-I've added a few comments on why we're using certain properties
-*/
-
-.full-withradius {
-	position  : relative;
-	background: #fff;
-
-	/*The background extends to the outside edge of the padding. No background is drawn beneath the border.*/
-	background-clip: padding-box;
-
-	border       : solid 8px transparent;
-	border-radius: 0.8rem;
-
-	&:before {
-		content      : "";
-		position     : absolute;
-		top          : 0;
-		right        : 0;
-		bottom       : 0;
-		left         : 0;
-		z-index      : -1;
-		margin       : -8px;
-		/* same as border width */
-		border-radius: inherit;
-		/* inherit container box's radius */
-		background   : linear-gradient(to left, turquoise, greenyellow);
+	.container img {
+		position: absolute;
+		max-width: 100%;
+		height   : auto;
+		z-index  : -1;
 	}
 }
