--- a/src/app/modules/specialfeature/certificateconfig/certificateconfig.component.html
+++ b/src/app/modules/specialfeature/certificateconfig/certificateconfig.component.html
@@ -1,5 +1,5 @@
 <div style="padding:15px 15px 10px 15px;">
-    <div><strong>Student Group Activity</strong></div>
+    <div><strong>Certificate Config</strong></div>
 </div>
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <div style="width: 100%;">
