--- a/src/app/modules/questionbank/question/question.component.html
+++ b/src/app/modules/questionbank/question/question.component.html
@@ -8,6 +8,7 @@
             <mat-form-field appearance="outline" [style.width.px]="200">
                 <mat-label>class</mat-label>
                 <mat-select formControlName="searchClassId" (selectionChange)="SelectSubject()">
+                    <mat-option>select</mat-option>
                     <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
                     </mat-option>
                 </mat-select>
@@ -44,7 +45,7 @@
             </button>
             <mat-divider></mat-divider>
         </div>
-        <div>
+        <div style="margin-top:10px">
             <mat-form-field appearance="outline" [style.width.px]="420">
                 <mat-label>unit detail</mat-label>
                 <mat-select formControlName="searchUnitDetailId">
@@ -60,7 +61,7 @@
             </mat-select>
         </mat-form-field> -->
             
-            <button [disabled]="loading || Permission=='read'" matTooltip="add new" mat-mini-fab (click)="AddNew()">
+            <button [disabled]="loading || Permission=='read' || UnitDetails.length==0" matTooltip="add new" mat-mini-fab (click)="AddNew()">
                 <mat-icon>add</mat-icon>
             </button>
         </div>
@@ -118,11 +119,13 @@
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
             <div style="display: flex;flex-direction: column;width:100%">
-                <mat-form-field appearance="outline">
-                    <textarea [maxlength]="600" [rows]="10" #Question autocomplete="Off" matInput
-                        (blur)="onBlur(element)" [value]="element.Question" [(ngModel)]="element.Question"></textarea>
-                    <mat-hint align="end" style="margin:5px">{{Question.value?.length || 0}}/600</mat-hint>
-                </mat-form-field>
+                <!-- <mat-form-field appearance="outline"> -->
+                    <ckeditor (blur)="onBlur(element)" style="margin-top:15px;margin-right:15px" #Question [(ngModel)]="element.Question" [config]="ckeConfig">                
+                    </ckeditor>
+                    <!-- <textarea [maxlength]="600" [rows]="5" #Question autocomplete="Off" matInput
+                        (blur)="onBlur(element)" [value]="element.Question" [(ngModel)]="element.Question"></textarea> -->
+                    <!-- <mat-hint align="end" style="margin:5px">{{Question.value?.length || 0}}/600</mat-hint> -->
+                <!-- </mat-form-field> -->
                 <div *ngIf="element.QuestionBankId>0" fxLayout="row" fxLayoutAlign="space-between center">
                     <span style="color:red;" *ngIf="message">{{message}}</span>
                     <input #inputfile [hidden]="true" type="file" accept='image/*'
