--- a/src/app/modules/specialfeature/certificateconfig/certificateconfig.component.scss
+++ b/src/app/modules/specialfeature/certificateconfig/certificateconfig.component.scss
@@ -15,9 +15,11 @@ mat-form-field {
   }
   .mat-column-ParentId,
   .mat-column-Confidential,
-  .mat-column-Title,  
   .mat-column-Sequence,
   .mat-column-Active,
   .mat-column-Action{
     flex:1 1 80px;
+  }
+  .mat-column-Title{
+    flex:1 1 120px;
   }
