--- a/src/app/modules/specialfeature/generatecertificate/generatecertificate.component.scss
+++ b/src/app/modules/specialfeature/generatecertificate/generatecertificate.component.scss
@@ -17,8 +17,8 @@ mat-table {
 	padding: 0px;
 }
 .container img{
-	max-width: 100%;
-	height:auto;
+	width:100%;
+	//height:5.5in;
 	z-index: -1;
 }
 // .header {
