--- a/src/app/modules/specialfeature/generatecertificate/generatecertificate.component.scss
+++ b/src/app/modules/specialfeature/generatecertificate/generatecertificate.component.scss
@@ -13,13 +13,15 @@ mat-table {
 }
 .container{
 	position: relative;
+	display: flex;
+	justify-content: center;
 	margin:0px;
 	padding: 0px;
 }
 .container img{
 	width:100%;
 	//height:5.5in;
-	z-index: -1;
+	//z-index: -1;
 }
 // .header {
 // 	width    : 100%;
