--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -11,8 +11,9 @@
     width:100%;
     float: left;
 }
+
 .mat-drawer-inner-container{
-    overflow: hidden;
+    overflow: hidden !important;
 }
 // .active-list-item {
 //     color: #3F51B5 !important; /* Note: You could also use a custom theme */
