--- a/src/app/modules/questionbank/questionandexam/questionandexam.component.html
+++ b/src/app/modules/questionbank/questionandexam/questionandexam.component.html
@@ -52,7 +52,7 @@
             <mat-divider></mat-divider>
             <div style="margin-top:15px">
                 <mat-form-field appearance="outline" [style.width.px]="200">
-                    <mat-label>no. of random number</mat-label>
+                    <mat-label>no. of random questions required</mat-label>
                     <input matInput type="number" max="100" autocomplete="Off" formControlName="searchNoOfRandom">
 
                 </mat-form-field>
