--- a/src/app/modules/specialfeature/certificateconfig/certificateconfig.component.html
+++ b/src/app/modules/specialfeature/certificateconfig/certificateconfig.component.html
@@ -113,3 +113,9 @@
     </mat-table>
     <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,50]"></mat-paginator>
 </div>
+<div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center" class="boxes">
+    <strong>Below variable name can be added in certificate definition.</strong>
+    <div *ngFor="let item of StudentVariableNames">
+        {{item}}
+    </div>
+</div>
