--- a/src/app/modules/studentexam/exams/exams.component.scss
+++ b/src/app/modules/studentexam/exams/exams.component.scss
@@ -13,20 +13,23 @@ mat-cell:first-of-type {
     justify-content: center;
     flex:1 0 135px;
 }
+.mat-column-MarkFormula,
 .mat-column-ExamName,
 .mat-column-StartDate,
 .mat-column-EndDate,
 .mat-column-ClassGroupId
 {
-    flex:1 0 135px;
+    flex:1 1 135px;
 }
 //.mat-column-Sequence,
 .mat-column-AttendanceStartDate{
     flex:1 0 140px;
 }
-.mat-column-Action,.mat-column-Active,.mat-column-ReleaseResult {
+.mat-column-Action,
+.mat-column-Active,
+.mat-column-ReleaseResult {
     justify-content: center;
-    flex:1 0 100px;
+    flex:1 1 80px;
 }
 .mat-column-ExamId{
     flex:1 0 70px;
